# ks

./: CMakeLists.txt  Makefile  README  client.cpp  client.h  device.cpp  device.h  killswitch.cpp  killswitch.h  ks  ks.pro  main.cpp  moc_client.cpp  moc_device.cpp  moc_killswitch.cpp  moc_test.cpp  test.cpp  test.h  urfkill.h
cmake/: cmake_uninstall.cmake.in
cmake/modules/: FindLibUrfkillQt.cmake
ks/: CMakeLists.txt  main.cpp
liburfkill-qt/: CMakeLists.txt  client.cpp
src/: CMakeLists.txt  main.cpp
